# chart-unit

./: .gitignore  .hlint.yaml  .travis.yaml  .travis.yml  TAGS  alphabeta.html  chart-svg.cabal  chart-unit.cabal  index.html  package.yaml  readme.html  readme.lhs  readme.md  stack-8.2.yaml  stack-ghc-8.2.yaml  stack-lts-10.10.yaml  stack-lts-11.3.yaml  stack.yaml
chart-unit/: chart-unit.cabal  stack-lts-10.10.yaml  stack.yaml
chart-unit-dhall/: chart-unit-dhall.cabal  stack.yaml
chart-unit-dhall/example/: dhallExample.hs
chart-unit-dhall/other/: test.dhall
chart-unit-dhall/src/Chart/: Dhall.hs
chart-unit-examples/: LICENSE  chart-unit-examples.cabal  stack.yaml
chart-unit-examples/examples/: gallery.hs  mainExample.hs  sourceExamples.hs
chart-unit-tests/: chart-unit-tests.cabal  stack.yaml
chart-unit-tests/test/: test.hs
chart-unit/other/: footer.md
chart-unit/src/: Chart.hs
chart-unit/src/Chart/: ADT.hs  Arrow.hs  Bar.hs  Core.hs  Data.hs  Glyph.hs  Hud.hs  Line.hs  Rect.hs  Svg.hs  Text.hs
chart-unit/src/Chart/Data/: Time.hs
chart-unit/test/: test.hs
examples/: FakeData.hs  alphabeta.md  animation.hs  cfgTests.hs  examples.hs  examples.md  gallery.hs  mainExample.hs  sourceExamples.hs
other/: footer.md  header.md  lhs.css  t1.html  t2.html  testAddMath.html  testKatex1.html  testMathjax1.html  testMathjax2.html
src/: Chart.hs  Random.hs
src/Chart/: ADT.hs  Arrow.hs  Bar.hs  Core.hs  Data.hs  Glyph.hs  Hud.hs  Lenses.hs  Line.hs  Range.hs  Rect.hs  Svg.hs  Text.hs  Types.hs  Unit.hs
src/Chart/Data/: Time.hs
src/Data/Generics/: Labels.hs
test/: test.hs
