name:                  chart-svg
version:               0.1.0.0
synopsis:              charts rendered to svg using diagrams
description:           readme.lhs
homepage:              https://github.com/tonyday567/hdchart
license:               BSD3
license-file:          LICENSE
author:                Tony Day
maintainer:            tonyday567@gmail.com
copyright:             Tony Day
category:              
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:    src
  
  exposed-modules:   Chart
                   , Chart.Types

  ghc-options:
              -O2
              -funbox-strict-fields
              -fforce-recomp
              
  build-depends:     base ==4.*
                   , protolude
                   , diagrams
                   , diagrams-lib
                   , diagrams-svg
                   , diagrams-core
                   , vector
                   , colour
                   , formatting
                   , foldl
                   , primitive

  default-language: Haskell2010

executable readme
  default-language:    Haskell2010
  ghc-options:         -O2
                       -funbox-strict-fields
                       -fforce-recomp
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  hs-source-dirs:      ./
  main-is:             readme.lhs
  build-depends:       base
                     , chart-svg
                     , protolude
                     , text
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , random-fu
                     , vector
                     , colour
                     , formatting
                     , foldl
                     , primitive
                     , foldl-incremental
                     , histogram-fill

source-repository head
  type:     git
  location: https://github.com/tonyday567/hdchart
