name: chart-unit
version: 0.5.0
synopsis:
  Native haskell charts.
description:
  See <https://tonyday567.github.io/chart-unit/index.html chart-unit> for chart bling and usage.
  .
  .
  ![example](other/mainExample.svg)
  .
  These charts are designed to be scale independent and amenable to combinatory busywork (hence the unit suffix).
  .
  .
extra-source-files:
  readme.md,
  stack.yaml,
  other/*.svg
extra-doc-files:
  other/*.svg
category:
  charts
homepage:
  https://github.com/tonyday567/chart-unit
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  2016 Tony Day
build-type:
  Simple
cabal-version:
  >=1.18

library
  hs-source-dirs:
    src
  exposed-modules:
    Chart,
    Chart.Arrow,
    Chart.Core,
    Chart.Glyph,
    Chart.Hud,
    Chart.Line,
    Chart.Rect,
    Chart.Text,
    Chart.Lenses
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
  build-depends:
    base >= 4.7 && < 5,
    colour,
    palette,
    diagrams-lib,
    diagrams-svg,
    foldl,
    formatting,
    lens,
    linear,
    data-default,
    numhask >= 0.0.5 && < 1,
    numhask-range >= 0.0.3 && < 1,
    text,
    SVGFonts
  default-language:
    Haskell2010
  default-extensions:
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    MultiParamTypeClasses,
    NegativeLiterals,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    RankNTypes,
    TypeFamilies,
    UnicodeSyntax

executable chart-source-examples
  default-language:
    Haskell2010
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    examples
  main-is:
    sourceExamples.hs
  other-modules:
    FakeData
  build-depends:
    base >= 4.7 && < 5,
    chart-unit,
    containers,
    diagrams-lib,
    foldl,
    lens,
    mwc-probability,
    mwc-random,
    numhask,
    primitive,
    protolude,
    tdigest,
    text,
    diagrams-rasterific
  default-extensions:
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    MultiParamTypeClasses,
    NegativeLiterals,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    RankNTypes,
    TypeFamilies,
    UnicodeSyntax

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    base >= 4.7 && < 5,
    chart-unit,
    numhask,
    tasty,
    tasty-hspec,
    text
  default-extensions:
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    MultiParamTypeClasses,
    NegativeLiterals,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    RankNTypes,
    TypeFamilies,
    UnicodeSyntax

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/chart-unit
