name:           chart-unit-examples
version:        0.0.0.1
synopsis:       Examples for chart-unit
description:    <<https://tonyday567.github.io/other/mainExample.svg>>
                .
                chart-unit is a native haskell charting library designed:
                .
                - as a chart DSL and algebra
                .
                - towards a minimalist look and feel
                .
                - to provide a set of default values that are robust across different data and physical chart scales
                .
                - around provision of a small but core set of chart types.
                .
                See <https://tonyday567.github.io/chart-unit/index.html chart-unit> for a chart gallery.
category:       charts
homepage:       https://github.com/tonyday567/chart-unit#readme
bug-reports:    https://github.com/tonyday567/chart-unit/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      2016 Tony Day
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.18

extra-doc-files:
    other/*.svg

extra-source-files:
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/chart-unit

executable chart-unit-gallery
  main-is: gallery.hs
  hs-source-dirs:
      examples
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chart-unit
    , diagrams-lib
    , formatting
    , generic-lens-labels
    , lens
    , mwc-probability >= 2.0.2
    , mwc-random
    , numhask
    , numhask-prelude
    , numhask-histogram
    , numhask-range
    , primitive
    , protolude
    , text
    , time
  default-language: Haskell2010

executable chart-unit-main-example
  main-is: mainExample.hs
  hs-source-dirs:
      examples
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chart-unit
    , generic-lens-labels
    , lens
    , numhask-prelude
    , numhask-range
  other-modules:
      Paths_chart_unit
  default-language: Haskell2010

executable chart-unit-source-examples
  main-is: sourceExamples.hs
  hs-source-dirs:
      examples
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chart-unit
    , diagrams-lib
    , generic-lens-labels
    , lens
    , numhask
    , numhask-prelude
    , numhask-range
    , protolude
    , text
  other-modules:
      Paths_chart_unit
  default-language: Haskell2010
