name:           chart-unit-tests
version:        0.0.0.1
synopsis:       Tests for chart-unit
description:    Tests for chart-unit.
category:       charts
homepage:       https://github.com/tonyday567/chart-unit#readme
bug-reports:    https://github.com/tonyday567/chart-unit/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      2016 Tony Day
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.18

extra-doc-files:
    other/*.svg

extra-source-files:
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/chart-unit

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , chart-unit
    , doctest
    , numhask
    , numhask-prelude
    , numhask-range
    , tasty
    , tasty-hspec
  default-language: Haskell2010
